# AdventOfCode2025

./: .gitignore  AdventOfCode2025.nimble
day1/: day1.nimble
day1/src/: day1.nim  file_loader.nim  safe_object.nim
day2/: day2.nimble
day2/src/: day2.nim  id_tracker.nim
day3/: CMakeLists.txt  inputs
day3/src/: CMakeLists.txt  main.cpp  main.h
